переписав HTML файли

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
             <div class="modal">
               <button class="modal__button" data-modal-close type="button"> 
                 <svg class="modal__icon-close">
-                  <use href="./images/icons/sprite.svg#icon-close"></use>
+                  <use href="./images/SVG/sprite.svg#icon-close"></use>
                 </svg>
               </button>
-              <h2 class="modal__title">Оставьте свои данные, мы вам перезвоним</h2>
+              <h2 class="modal__title">Залиште свої дані, ми вам передзвонимо</h2>
               <form class="form-field" name="main-form" autocomplete="on">
                 <div class="form-field__thumb">
                   <div class="form-field__name">
                     <label 
                     class="form-field__label" 
                     for="name">
-                    Имя
+                    Ім'я
                   </label>
                   <div class="form-field__thumb-input">
                     <input 
@@ -103,7 +103,7 @@
                     name="name"
                     >
                     <svg class="form-field__icon">
-                      <use href="./images/icons/sprite.svg#icon-person-black"></use>
+                      <use href="./images/SVG/sprite.svg#icon-person-black"></use>
                     </svg>
                   </div>
                   </div>
@@ -121,7 +121,7 @@
                     name="tel"
                     >
                     <svg class="form-field__icon">
-                      <use href="./images/icons/sprite.svg#icon-phone-black"></use>
+                      <use href="./images/SVG/sprite.svg#icon-phone-black"></use>
                     </svg>
                   </div>
                   </div>
@@ -129,7 +129,7 @@
                     <label 
                     class="form-field__label" 
                     for="email">
-                    Почта
+                    Пошта
                   </label>
                   <div class="form-field__thumb-input">
                     <input 
@@ -139,21 +139,21 @@
                     name="email"
                     >
                     <svg class="form-field__icon">
-                      <use href="./images/icons/sprite.svg#icon-email-black"></use>
+                      <use href="./images/SVG/sprite.svg#icon-email-black"></use>
                     </svg>
                   </div>
                   </div>
                   <!-- Поле для коментаря -->
                   <div class="form-field__thumb-text-area">
                     <label class="form-field__label" for="text-area">
-                      Коментарий
+                      Коментар
                     </label>
                     <textarea 
                       class="form-field__text-area" 
                       name="coment"
                       id="text-area"  
                       rows="5"
-                      placeholder="Введите текст"
+                      placeholder="Введіть текст"
                     ></textarea>
                   </div>
                 </div>
@@ -167,19 +167,19 @@
                       id="allow" 
                       name="allow">
                       <svg class="allow-group__icon">
-                        <use href="./images/icons/sprite.svg#icon-check"></use>
+                        <use href="./images/SVG/sprite.svg#icon-check"></use>
                       </svg>
                     </div>
-                    Соглашаюсь с рассылкой и принимаю  
+                    Погоджуюся з розсилкою та приймаю  
                     <span class="allow-group__span">
                       <a class="allow-group__link" href="#">
-                        Условия договора
+                        Умови договору
                       </a>
                     </span> 
                   </label>
                 </div>
                 <div class="allow-group__thumb-button">
-                  <button class="allow-group__button-submit" type="submit">Отправить</button>
+                  <button class="allow-group__button-submit" type="submit">Відправити</button>
                 </div>
               </form>
             </div>
@@ -375,7 +375,7 @@
                 </div>
               </div>
             </li>
-            <li class="our-team-box">
+            <li class="box-employment-item">
               <img
                 src="./images/JPG/Микола_Тарасов.jpg"
                 width="270"
@@ -550,7 +550,7 @@
             <ul class="address-list">
               <li class="address__item address__outer-margin">
                 <p class="address__text">
-                  г. Киев, пр-т Леси Украинки, 26
+                  м. Київ, пр-т Лесі Українки, 26
                 </p>
               </li>
               <li class="address__item address__outer-margin">
