--- a/portfolio.html
+++ b/portfolio.html
@@ -72,16 +72,16 @@
       <!-- Секція наші пропозиції -->
       <section class="section-orders section">
           <div class="container">
-          <h1 class="visually-hidden">Нашы предложения</h1>
+          <h1 class="visually-hidden">Наші пропозиції</h1>
           <ul class="radio-button">
             <li class="radio-button__item radio-button__outer-margin">
-              <button class="radio-button__button" type="button">Все</button>
+              <button class="radio-button__button" type="button">Усі</button>
             </li>
             <li class="radio-button__item radio-button__outer-margin">
-              <button class="radio-button__button" type="button">Веб-сайты</button>
+              <button class="radio-button__button" type="button">Веб-сайти</button>
             </li>
             <li class="radio-button__item radio-button__outer-margin">
-              <button class="radio-button__button" type="button">Приложения</button>
+              <button class="radio-button__button" type="button">Додатки</button>
             </li>
             <li class="radio-button__item radio-button__outer-margin">
               <button class="radio-button__button" type="button">Дизайн</button>
@@ -97,13 +97,12 @@
                 <div class="our-offers__box-shadow flex-box">
                  <div class="our-offers__box flex-box">
                   <img
-                  src="./images/photo-portfolio/photo-technocrack.jpg"
-                  alt="фото ноутбука из изображением сайта"
+                  src="./images/JPG/Технокряк.jpg"
+                  alt=""
                 />
                 <div class="our-offers__overlay">
                   <p class="our-offers__text">
-                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                  </p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
                  </div>
                   <div class="our-offers__thumb">
@@ -118,13 +117,12 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-poster.jpg"
-                    alt="постер матча баскетбола"
+                    src="./images/JPG/Постер.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
@@ -139,18 +137,17 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-restaurant-seafood.jpg"
-                    alt="лого ресторана"
+                    src="./images/JPG/Ресторан_Seafood.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
                     <h2 class="our-offers__title-name">Ресторан Seafood</h2>
-                    <p class="our-offers__paragraph">Приложение</p>
+                    <p class="our-offers__paragraph">Додаток</p>
                   </div>
                 </div>
               </a>
@@ -160,17 +157,16 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-project-prime.jpg"
-                    alt="фото чёрные беспроводные наушники"
+                    src="./images/JPG/Проєкт_Prime.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
-                    <h2 class="our-offers__title-name">Проект Prime</h2>
+                    <h2 class="our-offers__title-name">Проєкт Prime</h2>
                     <p class="our-offers__paragraph">Маркетинг</p>
                   </div>
                 </div>
@@ -181,18 +177,17 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-project-boxes.jpg"
-                    alt="фото две коробки"
+                    src="./images/JPG/Проєкт_Boxes.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
-                    <h2 class="our-offers__title-name">Проект Boxes</h2>
-                    <p class="our-offers__paragraph">Приложение</p>
+                    <h2 class="our-offers__title-name">Проєкт Boxes</h2>
+                    <p class="our-offers__paragraph">Додаток</p>
                   </div>
                 </div>
               </a>
@@ -202,13 +197,12 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-inspiration-borders.jpg"
-                    alt="фото монитора ком'ютера с изображением сайта"
+                    src="./images/JPG/Inspiration_has_no_Borders.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
@@ -223,17 +217,16 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-limeted-edition.jpg"
-                    alt="фото книги"
+                    src="./images/JPG/Видання_Limited_Edition.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
-                    <h2 class="our-offers__title-name">Издание Limited Edition</h2>
+                    <h2 class="our-offers__title-name">Видання Limited Edition</h2>
                     <p class="our-offers__paragraph">Дизайн</p>
                   </div>
                 </div>
@@ -244,17 +237,16 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-project-lab.jpg"
-                    alt="фото бирки"
+                    src="./images/JPG/Проєкт_LAB.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
-                    <h2 class="our-offers__title-name">Проект LAB</h2>
+                    <h2 class="our-offers__title-name">Проєкт LAB</h2>
                     <p class="our-offers__paragraph">Маркетинг</p>
                   </div>
                 </div>
@@ -265,18 +257,17 @@
                 <div class="our-offers__box-shadow flex-box">
                   <div class="our-offers__box flex-box">
                   <img
-                    src="./images/photo-portfolio/photo-growing-business.jpg"
-                    alt="фото ноутбука с изображением сайта"
+                    src="./images/JPG/Growing_Business.jpg"
+                    alt=""
                   />
                   <div class="our-offers__overlay">
                     <p class="our-offers__text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
-                    </p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.  </p>
                   </div>
                    </div>
                   <div class="our-offers__thumb">
                     <h2 class="our-offers__title-name">Growing Business</h2>
-                    <p class="our-offers__paragraph">Приложение</p>
+                    <p class="our-offers__paragraph">Додаток</p>
                   </div>
                 </div>
               </a>
@@ -290,16 +281,15 @@
       <div class="container flex-box">
         <div>
           <!-- Логотип -->
-          <a class="logo link logo__footer-page" href="./index.html"
-            ><span class="logo__first-half-footer">Web</span
-            ><span class="logo__secondary-half-footer">Studi</span></a
-          >
+            <a class="logo link logo__footer-page" href="/index.html">
+              <img src="./images/SVG/WebStudio_Footer.svg" alt="Лого у футері">
+            </a>
           <!-- Адрес -->
           <address class="address">
             <ul class="address-list">
               <li class="address__item address__outer-margin">
                 <p class="address__text">
-                  г. Киев, пр-т Леси Украинки, 26
+                  м. Київ, пр-т Лесі Українки, 26
                 </p>
               </li>
               <li class="address__item address__outer-margin">
@@ -314,43 +304,41 @@
             </ul>
           </address>
         </div>
-        <!-- Приэднатися футер -->
         <section class="join-in">
-          <h2 class="join-in__title">присоединяйтесь</h2>
+          <h2 class="join-in__title">Приєднюйтесь</h2>
           <ul class="join-in__list">
             <li>
               <a class="join-in__link" href="#">
                 <svg class="join-in__icon">
-                  <use href="images/icons/sprite.svg#icon-instagram"></use>
+                  <use href="images/SVG/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="join-in__link" href="#">
                 <svg class="join-in__icon">
-                  <use href="images/icons/sprite.svg#icon-twitter"></use>
+                  <use href="images/SVG/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="join-in__link" href="#">
                 <svg class="join-in__icon">
-                  <use href="images/icons/sprite.svg#icon-facebook"></use>
+                  <use href="images/SVG/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="join-in__link" href="#">
                 <svg class="join-in__icon">
-                  <use href="images/icons/sprite.svg#icon-linkedin"></use>
+                  <use href="images/SVG/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </section>
-        <!-- Submit -->
         <div class="submit">
-          <h2 class="submit__title">Подпишитесь на рассылку</h2>
+          <h2 class="submit__title">Підпишіться на розсилку</h2>
           <form class="form-submit">
             <div class="form-submit__thumb">
               <input 
@@ -361,9 +349,9 @@
               >
               <div class="form-submit__box">
                 <button class="form-submit__button" type="button">
-                  Подписаться
+                  Підписатись
                   <svg class="form-submit__icon">
-                    <use href="images/icons/sprite.svg#icon-send"></use>
+                    <use href="images/SVG/sprite.svg#icon-send"></use>
                   </svg>
                 </button>
               </div>
@@ -371,6 +359,6 @@
           </form>
         </div>
       </div>
-      </footer>
+    </footer>
   </body>
 </html>
